z-index fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,9 @@ select{
 .form-control{
 	border: 1px solid #777;
 }
+.stickysecond{
+	z-index: 1;
+}
 .stickysecond form{
 	margin: 10px;
 }
